# Imara

./: .gitignore  Cargo.toml  TODO  game_world
assets/shaders/: border_frag.glsl  font_frag.glsl  font_vert.glsl  frag.glsl  screen_frag.glsl  screen_vert.glsl  ui_quad_frag.glsl  ui_quad_vert.glsl  vert.glsl
src/: core.rs  gl_bindings.rs  logs.rs  main.rs  obj_parser.rs  utils.rs
src/editor/: editor.rs
src/game_world/: components.rs  world.rs
src/renderer/: draw.rs  mod.rs  shaders.rs
src/systems/: mod.rs  physics.rs  render_system.rs  system.rs
src/ui/: ui.rs
