[package]
name = "imara"
version = "0.1.0"
authors = ["teddy <tedd.juma@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nphysics3d="0.19.0"
nalgebra = "0.24.0"
ncollide3d = "0.27.0"
gl = "0.14.0"
glfw = "0.41.0"
memoffset = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
freetype = "0.7.0"